Tentative support for geohash. Tests still broken